# oep-upload

./: .env.example  .env.exmple  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
api/: oep.py
config/: .settings.base.yaml  __init__.py  loader.py  models.py  settings.dev.yaml  settings.prod.yaml
create/: tables.py
docs/: example_local_upload.py  example_step_by_step.py  hands_on_guide.md  local-oep-quickstart.md  usage.md
scripts/: README.md  make_test_datasets.py
src/oep_upload/: __init__.py  __main__.py  cli.py  utils.py  verify.py
src/oep_upload/api/: oep.py
src/oep_upload/config/: __init__.py  loader.py  logging.py  models.py  settings.base.yaml  settings.py
src/oep_upload/create/: tables.py
src/oep_upload/describe/: csv.py  csv_file.py
src/oep_upload/upload/: datapackage.py  null_type_helpers.py
src/oep_upload/upload/metadata/: dataset.py  resource.py
tests/: test_api_paths.py  test_cli.py  test_concurrency.py  test_describe_encoding.py  test_loader.py  test_logging.py  test_paths_settings.py  test_public_api.py  test_retry.py  test_settings_model.py  test_upload_header.py  test_verify.py
tools/: xls_to_csv.py
upload/: datapackage.py
