[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oep-upload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "oem2orm==0.5.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# console entry point: `oep-upload` works regardless of how it was installed
[project.scripts]
oep-upload = "oep_upload.cli:main"

# include YAML config files in the wheel
[tool.setuptools.package-data]
oep_upload = ["config/*.yaml"]

# never ship a developer's machine-specific local config inside the wheel
[tool.setuptools.exclude-package-data]
oep_upload = ["config/settings.local.yaml"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
